Bug 42037 - "grow domain error" in lto1
Summary: "grow domain error" in lto1
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: lto (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords: lto
Depends on:
Blocks:
 
Reported: 2009-11-13 23:46 UTC by Dmitry Gorbachev
Modified: 2009-12-11 15:53 UTC (History)
2 users (show)

See Also:
Host: i686-pc-linux-gnu
Target: i686-pc-linux-gnu
Build: i686-pc-linux-gnu
Known to work:
Known to fail:
Last reconfirmed:


Attachments
Testcase (11.48 KB, text/plain)
2009-11-13 23:52 UTC, Dmitry Gorbachev
Details
Backtrace (666 bytes, text/plain)
2009-11-13 23:53 UTC, Dmitry Gorbachev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Gorbachev 2009-11-13 23:46:43 UTC
lto1: internal compiler error: vector VEC(ld_plugin_symbol_resolution_t,heap) grow domain error, in lto_resolution_read at lto/lto.c:313
Comment 1 Dmitry Gorbachev 2009-11-13 23:52:26 UTC
Created attachment 19013 [details]
Testcase

gcc -flto -fuse-linker-plugin chew.i
Comment 2 Dmitry Gorbachev 2009-11-13 23:53:25 UTC
Created attachment 19014 [details]
Backtrace

gcc version 4.5.0 20091112 (experimental)
Comment 3 Richard Biener 2009-11-14 19:39:52 UTC
Caused by recent changes
Comment 4 Richard Biener 2009-12-11 15:53:02 UTC
Fixed.
Comment 5 Richard Biener 2009-12-11 15:53:16 UTC
Subject: Bug 42037

Author: rguenth
Date: Fri Dec 11 15:52:57 2009
New Revision: 155166

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=155166
Log:
2009-12-11  Richard Guenther  <rguenther@suse.de>

	PR lto/42037
	* lto.c (lto_resolution_read): Properly grow the vector.

Modified:
    trunk/gcc/lto/ChangeLog
    trunk/gcc/lto/lto.c