2009-12-11  Richard Guenther  <rguenther@suse.de>

PR lto/42037
	* lto.c (lto_resolution_read): Properly grow the vector.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155166 138bc75d-0d04-0410-961f-82ee72b054a4