gcc/lto/lto.c
@@ -344,7 +344,7 @@ lto_resolution_read (FILE *resolution, lto_file *file)
 	internal_error ("Invalid resolution in the resolution file.");
 
       VEC_safe_grow_cleared (ld_plugin_symbol_resolution_t, heap, ret,
-			     index + 1);
+			     max_index + 1);
       VEC_replace (ld_plugin_symbol_resolution_t, ret, index, r);
     }
 
